<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_rooms"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/editTextMaxPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:minHeight="48dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextArrivalDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/arrival_date"
        android:padding="12dp"
        android:drawableRight="@drawable/icons8_date_picker_32_min" />

    <EditText
        android:id="@+id/editTextDepartureDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/departure_date"
        android:padding="12dp"
        android:drawableRight="@drawable/icons8_date_picker_32_min" />


    <Spinner
        android:id="@+id/spinnerPeople"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinnerStars"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />
</LinearLayout>
